<resources>
    <string name="app_name">ĐẠI PHÁP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="luan_ngu">Đại Pháp là trí huệ của Sáng Thế Chủ. Ông là căn bản của khai thiên tịch địa, của tạo hoá vũ trụ, nội hàm từ cực nhỏ đến cực lớn, có triển hiện khác nhau tại các tầng thứ thiên thể khác nhau. Từ vi quan nhất của thiên thể đến lạp tử vi quan nhất xuất hiện, [qua] tầng tầng lạp tử vô lượng vô số, từ nhỏ đến lớn, mãi cho đến nguyên tử, phân tử, hành tinh, thiên hà mà nhân loại biết ở tầng bề mặt và cho đến cả to lớn hơn nữa, các lạp tử lớn nhỏ khác nhau tổ [hợp] thành các sinh mệnh lớn nhỏ khác nhau cũng như các thế giới lớn nhỏ khác nhau hiện hữu khắp nơi trong thiên thể vũ trụ. Đối với các sinh mệnh ở trên bản thể các lạp tử ở tầng thứ khác nhau mà nói, thì lạp tử của tầng lớn hơn một mức chính là các vì sao trên bầu trời của họ, tầng tầng đều như thế. Đối với sinh mệnh các tầng vũ trụ mà nói thì là vô cùng vô tận. Đại Pháp còn tạo ra thời gian, không gian, đa dạng chủng loại sinh mệnh cũng như vạn sự vạn vật, không gì không bao hàm, không gì bị bỏ sót. Đây là thể hiện cụ thể tại các tầng thứ khác nhau của đặc tính Chân-Thiện-Nhẫn của Đại Pháp. Phương thức mà nhân loại tìm hiểu vũ trụ và sinh mệnh dù phát triển đến đâu, cũng chỉ thấy được một phần không gian nơi nhân loại tồn tại trong vũ trụ tầng thấp. Trong nhiều lần xuất hiện văn minh của nhân loại tiền sử đã từng thám hiểm tới cả những tinh cầu khác, nhưng dù bay cao bay xa tới đâu, cũng không rời khỏi không gian nơi nhân loại tồn tại. Nhân loại vĩnh viễn không thể thật sự nhận thức được triển hiện chân thực của vũ trụ. Nhân loại nếu muốn liễu giải được bí ẩn của vũ trụ, thời không, và thân thể người, thì chỉ có tu luyện trong chính Pháp, đắc chính giác, đề cao tầng thứ của sinh mệnh. Trong tu luyện cũng khiến phẩm chất đạo đức được đề cao; khi phân biệt được thật sự thiện và ác, tốt và xấu, đồng thời vượt khỏi tầng thứ nhân loại, thì mới nhìn thấy được, mới tiếp xúc được vũ trụ chân thực và các sinh mệnh tại các tầng thứ khác nhau các không gian khác nhau. Những tìm tòi của nhân loại là vì để cạnh tranh kỹ thuật, mượn cớ là để cải biến điều kiện sinh tồn, nhưng đa số là lấy việc bài xích Thần, phóng túng đạo đức nhân loại [vốn để] ước chế tự thân làm cơ sở, do đó văn minh xuất hiện của nhân loại quá khứ mới bị huỷ diệt nhiều lần. Khi tìm hiểu cũng chỉ có thể giới hạn trong thế giới vật chất, về phương thức là khi một loại sự vật được nhận thức rồi mới nghiên cứu nó, nhưng những hiện tượng sờ không được, nhìn không thấy trong không gian nhân loại, nhưng tồn tại một cách khách quan, và lại có thể phản ánh một cách hết sức thực tại ở hiện thực nhân loại —gồm cả tinh thần, tín ngưỡng, Thần ngôn, Thần tích— thì do tác dụng của việc bài xích Thần nên xưa nay vẫn không dám động chạm đến. Nếu nhân loại có thể lấy đạo đức làm cơ sở để đề cao phẩm hạnh và quan niệm của con người, như thế thì văn minh của xã hội nhân loại mới có thể lâu dài, và Thần tích cũng sẽ xuất hiện trở lại nơi xã hội nhân loại. Trong xã hội nhân loại quá khứ cũng từng xuất hiện nhiều lần văn hoá nửa-Thần nửa-nhân, để nhân loại đề cao nhận thức chân chính về sinh mệnh và vũ trụ. Nhân loại đối với biểu hiện của Đại Pháp tại thế gian có thể thể hiện ra sự thành kính và tôn trọng thích đáng, thì sẽ mang đến hạnh phúc hay vinh diệu cho người, dân tộc hoặc quốc gia. Thiên thể, vũ trụ, sinh mệnh, cũng như vạn sự vạn vật là do Đại Pháp của vũ trụ khai sáng; sinh mệnh nào rời xa khỏi Ông thì đúng là bại hoại; người thế gian nào có thể phù hợp với Ông thì đúng là người tốt, đồng thời sẽ mang đến thiện báo và phúc thọ; làm người tu luyện, mà đồng hoá với Ông thì chư vị chính là bậc đắc Đạo: Thần.\n — Lý Hồng Chí 24 tháng Năm, 2015</string>
    <string name="bg01">BÀI GIẢNG SỐ 1</string>
    <string name="bg02">BÀI GIẢNG SỐ 2</string>
    <string name="bg03">BÀI GIẢNG SỐ 3</string>
    <string name="bg04">BÀI GIẢNG SỐ 4</string>
    <string name="bg05">BÀI GIẢNG SỐ 5</string>
    <string name="bg06">BÀI GIẢNG SỐ 6</string>
    <string name="bg07">BÀI GIẢNG SỐ 7</string>
    <string name="bg08">BÀI GIẢNG SỐ 8</string>
    <string name="bg09">BÀI GIẢNG SỐ 9</string>
</resources>